# Cloud-for-fiels

./: .env  .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requests.http  requirements.txt  webpack.config.js
accounts/: api.py  serializers.py
app/: models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_user_delete_users.py  0003_alter_user_email_alter_user_login.py
backend/: .env.example  Dockerfile  README.md  db.sqlite3  manage.py  requirements.txt
backend/API/: settings.py  urls.py
backend/app/: models.py  serializers.py  views.py
backend/media/: 30  31  34  40  42  44  47
backend/mycloud/: asgi.py  settings.py  urls.py  wsgi.py
backend/server/: models.py  serializers.py  urls.py  views.py
cloudStorage/: asgi.py  settings.py  urls.py  wsgi.py
cloudfile/: asgi.py  settings.py  urls.py  wsgi.py
fronted/: .env.production  index.html  package.json  vite.config.ts
fronted/src/: App.css  index.css
frontend/: .eslintrc.json  README.md  eslint.config.mjs  package-lock.json  package.json  urls.py  vite.config.ts  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  App.tsx  index.jsx  main.tsx  styles.css
storage/: admin.py  api.py  apps.py  decoder.py  models.py  serializers.py  urls.py
storage/migrations/: 0001_initial.py  0002_alter_files_size_alter_fileversion_version.py  0003_remove_fileversion_file_id_alter_files_user_id_and_more.py  0004_rename_upload_date_files_uploaded_at_and_more.py  (+3 more)
(+95 files in other folders)
